--- a/SemanaNLW2/package.json
+++ b/SemanaNLW2/package.json
@@ -10,5 +10,11 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
